--- a/style.css
+++ b/style.css
@@ -1,44 +1,49 @@
+body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
 .section {
   display: grid;
-  align-content: center;
-  grid-template-columns: auto auto;
+  grid-template-columns: repeat(3, 2fr);
 }
 
 img {
-  height: 500px;
-  width: 500px;
-  padding: px;
+  height: 300px;
+  width: 400px;
+  margin-right: 25px;
 }
+
 h1 {
   text-align: center;
 }
 
-a {
-  text-align: center;
-  padding: 5px;
-  text-decoration: none;
-  font-style: italic;
-  color: black;
-  margin: 0;
-  cursor: progress;
-}
-
-a:active {
-  color: black;
-}
-
-@media only screen and (max-width: 680px) {
+@media (max-width: 850px) {
   .section {
     display: grid;
-    align-content: center;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media (max-width: 749px) {
+  .section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  h1 {
+    text-align: center;
+  }
   img {
     width: 300px;
-    height: 300px;
-    padding: 3px 3px 3px 3px;
+    height: 200px;
+  }
+}
+
+@media (max-width: 450px) {
+  .section {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
   }
 }
