--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ h1 {
   text-align: center;
 }
 
+footer{
+  text-align: center;
+}
+
 @media (max-width: 850px) {
   .section {
     display: grid;
